plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'com.google.cloud.tools.jib' version '3.1.4'
    id "org.sonarqube" version "3.3"
    id 'jacoco'
}

group = 'com.example'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2020.0.4")
    set('testcontainersVersion', "1.16.0")
}

def cucumberVersion = "6.11.0"

task cucumber() {
    dependsOn assemble, testClasses
    doLast {
        javaexec {
            main = "io.cucumber.core.cli.Main"
            jvmArgs = ['-Dspring.profiles.active=cucumber']
            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
            args = ['--plugin', 'pretty', '--glue', 'com.example.springjpaoracle',
                    '--tags', System.getProperty('cucumber.tags', 'not @WorkInProgress'),
                    'src/test/resources/features']
        }
    }
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.cloud:spring-cloud-stream'
    implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.flywaydb:flyway-core'
    implementation 'com.auth0:java-jwt:3.18.2'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-stream', classifier: 'test-binder'

    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:oracle-xe'
    testImplementation 'org.testcontainers:rabbitmq'
    testImplementation("io.cucumber:cucumber-junit-platform-engine:$cucumberVersion")
    testImplementation("io.cucumber:cucumber-java:$cucumberVersion")
    testImplementation("io.cucumber:cucumber-spring:$cucumberVersion")
    testImplementation 'org.awaitility:awaitility:4.1.0'
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation, runtimeOnly
    }
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.register("slowJUnit", Test) {
    useJUnitPlatform {
        includeTags("slow")
        jvmArgs = ['-Dspring.profiles.active=cucumber']
    }
    testLogging {
        outputs.upToDateWhen { false }
        showStandardStreams = true
    }
}

test {
    useJUnitPlatform {
        excludeTags 'slow'
    }
}

jib {
    from {
        //image = "openjdk:17-jdk-alpine"
        image = "adoptopenjdk:11-jre-hotspot"
    }
    to {
        image = 'localhost:32000/springjpaoracle'
        tags = [version, "latest"]
    }
    container {
        mainClass = 'com.example.springjpaoracle.Application'
    }
}

sonarqube {
    properties {
        property "sonar.sources", "src/test/resources/features,src/main/java"
        property 'sonar.host.url', 'http://localhost:9000'
        property 'sonar.projectKey', 'spring-jpa-oracle'
        property 'sonar.login', '49e208586ac4e1e9ae80674bcba0b7f095516930'
    }
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}
test.finalizedBy jacocoTestReport

tasks.named('sonarqube').configure {
    dependsOn test
}
